// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/Pagination/PaginationControls should render properly for offset based and marker based pagination 1`] = `
<div
  className="bdl-Pagination"
>
  <div
    className="bdl-Pagination-count"
  >
    <PaginationMenu
      onPageClick={[MockFunction]}
      pageCount={5}
      pageNumber={1}
    />
  </div>
  <ButtonGroup
    className="bdl-Pagination-nav"
  >
    <Tooltip
      isDisabled={false}
      text={
        <FormattedMessage
          defaultMessage="Previous Page"
          id="be.pagination.previousPage"
        />
      }
    >
      <Button
        className=""
        isDisabled={false}
        isLoading={false}
        onClick={[MockFunction]}
        showRadar={false}
        type="submit"
      >
        <IconPageBack
          height={9}
          width={6}
        />
      </Button>
    </Tooltip>
    <Tooltip
      isDisabled={true}
      text={
        <FormattedMessage
          defaultMessage="Next Page"
          id="be.pagination.nextPage"
        />
      }
    >
      <Button
        className=""
        isDisabled={true}
        isLoading={false}
        onClick={[MockFunction]}
        showRadar={false}
        type="submit"
      >
        <IconPageForward
          height={9}
          width={6}
        />
      </Button>
    </Tooltip>
  </ButtonGroup>
</div>
`;

exports[`elements/Pagination/PaginationControls should render properly for offset based and marker based pagination 2`] = `
<div
  className="bdl-Pagination"
>
  <ButtonGroup
    className="bdl-Pagination-nav"
  >
    <Tooltip
      isDisabled={false}
      text={
        <FormattedMessage
          defaultMessage="Previous Page"
          id="be.pagination.previousPage"
        />
      }
    >
      <Button
        className=""
        isDisabled={false}
        isLoading={false}
        onClick={[MockFunction]}
        showRadar={false}
        type="submit"
      >
        <IconPageBack
          height={9}
          width={6}
        />
      </Button>
    </Tooltip>
    <Tooltip
      isDisabled={true}
      text={
        <FormattedMessage
          defaultMessage="Next Page"
          id="be.pagination.nextPage"
        />
      }
    >
      <Button
        className=""
        isDisabled={true}
        isLoading={false}
        onClick={[MockFunction]}
        showRadar={false}
        type="submit"
      >
        <IconPageForward
          height={9}
          width={6}
        />
      </Button>
    </Tooltip>
  </ButtonGroup>
</div>
`;
